# RecoveryMagic

./: Cargo.toml  README.md  tauri.conf.json
backend/: .dockerignore  Dockerfile  README.md  requirements.txt
backend/app/: config.py  llm.py  main.py  rate_limiter.py
gui/: app.js  index.html
src/: drives.rs  fs.rs  gui_bridge.rs  indexer.rs  logging.rs  main.rs  scan.rs  util.rs
