[package]
name = "RecoveryMagic"
version = "0.1.0"
edition = "2025"
build = "build.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
num_cpus = "1.16"

ntfs-reader = "0.3"
widestring = "0.4.3"
winapi = { version = "0.3", features = ["winnt", "fileapi", "handleapi",
  "shellapi",
  "winuser",
  "processthreadsapi",
  "securitybaseapi",
  ] }

dokan = "0.3.1"
dokan-sys = "0.3.1"

tauri = { version = "1", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
